--- a/my_portfolio/my_profile/templates/my_profile/index.html
+++ b/my_portfolio/my_profile/templates/my_profile/index.html
@@ -62,7 +62,7 @@
                 
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index-2.html">Walid KEBBAB</a>
+                            <a href="#">Walid KEBBAB</a>
                         </div>
                     </div>
                     
@@ -107,7 +107,7 @@
                                     <h2><span class="typing"></span></h2>
                                     
                                     <div class="margin-top-60">
-                          <a class="button button-style button-style-icon fa fa-long-arrow-right smoth-scroll" href="#portfolio">View Portfolio</a>
+                          <a class="button button-style button-style-icon fa fa-long-arrow-right smoth-scroll" href="#portfolio">Voir mon CV.</a>
                                   </div>
                                 
                                 </div>
@@ -129,7 +129,7 @@
          <div class="row">
                
               <div class="col-md-6 col-sm-12 col-xs-12">
-                <img class="img-responsive" src="{% static 'my_profile/bg/me.jpg' %}" draggable="false" alt="">
+                <img class="img-responsive" src="{% static 'my_profile/images/bg/me.jpg' %}" draggable="false" alt="">
               </div>
                 
               <div class="col-md-6 col-sm-12 col-xs-12">
@@ -137,7 +137,7 @@
                   
                   <h2>À propos moi.</h2>
                   
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p> Titulaire d'une Licence en ignénerie des systémes d'information et des logiciel, un Master 2 en ingénerie des systémes informatique intélligent, et bientot d'un Master 2 en Miage valorisation et protection des données de l'entreprise à l'université de Paris, Je suis actuellement en stage de fin d'étude de 06 mois autant que développeur full stack au sein de l'entreprise Free Mobile, et je suis à la recherche d'une opportunité en CDI à partir du 01 octobre 2021.</p>
                  </div>
              
               </div>
@@ -213,10 +213,10 @@
          <div class="row">
            <div class="col-md-12">   
              
-             <h2>Are You Looking For Your Business Online Presence?</h2>
+             <h2>Mon profil vous intéresse! Contactez moi =D </h2>
              
              <div class="text-center margin-top-20">
-          <a class="button button-style button-style-dark button-style-icon fa fa-long-arrow-right smoth-scroll" href="#contact">Contact moi</a>
+          <a class="button button-style button-style-dark button-style-icon fa fa-long-arrow-right smoth-scroll" href="#contact">Contact </a>
             </div>
             
             </div>    
@@ -230,38 +230,29 @@
        
     <!-- Contact Start -->
     <section id="contact" class="contact-us section-space-padding">
-       <div class="container">
-          <div class="row">
-                <div class="col-sm-12">
-                    <div class="section-title">
-                        <h2>Contact moi</h2>
-                        <p>Si mon profile vous a attiré, n'hésitez pas a me contacter.</p>
-                    </div>
-                </div>
-            </div>
-            
+
             
            <div class="text-center margin-top-10 margin-bottom-50">
             <div class="row">
             
                <div class="col-md-4 col-sm-4">
                 <div class="contact-us-detail">  
-                 <a href="tel:+33753983494"><i class="fa fa-mobile "></i></a>
-                  <p><a href="tel:+33753983494">(+33) 0753983494</a></p>
+                 <a href="tel:+33753983494" target="_blank"><i class="fa fa-mobile "></i></a>
+                  <p><a href="tel:+33753983494" target="_blank">(+33) 0753983494</a></p>
                  </div>
                 </div>
                
                <div class="col-md-4 col-sm-4">
                 <div class="contact-us-detail">
-                <a href="mailto:name@domain.com"> <i class="fa fa-mail-reply color-5"></i></a>
-                  <p><a href="mailto:name@domain.com">walid-kebbab@outlook.fr</a></p>
+                <a href="mailto:walid-kebbab@outlook.fr" target="_blank"> <i class="fa fa-mail-reply color-5"></i></a>
+                  <p><a href="mailto:walid-kebbab@outlook.fr" target="_blank">walid-kebbab@outlook.fr</a></p>
                  </div>
                 </div>
                  
                <div class="col-md-4 col-sm-4">
                 <div class="contact-us-detail">
-                <a href="https://www.linkedin.com/in/walid-kebbab/"> <i class="fa fa-linkedin color-6"></i></a>
-                  <p><a href="https://www.linkedin.com/in/walid-kebbab/">walid-kebbab</a></p>
+                <a href="https://www.linkedin.com/in/walid-kebbab/" target="_blank"> <i class="fa fa-linkedin color-6"></i></a>
+                  <p><a href="https://www.linkedin.com/in/walid-kebbab/" target="_blank">walid-kebbab</a></p>
                  </div>
                 </div>
               
