--- a/templates/index.html
+++ b/templates/index.html
@@ -19,14 +19,14 @@
     <title>Walid KEBBAB Portfolio</title>
      {% load static %}
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{% static 'my_profile/images/favicon/favicon.ico'%}">
-    <link rel="apple-touch-icon" sizes="144x144" type="image/x-icon" href="{% static 'my_profile/images/favicon/apple-touch-icon.png'%}">
+    <link rel="shortcut icon" href="{% static 'images/favicon/favicon.ico'%}">
+    <link rel="apple-touch-icon" sizes="144x144" type="image/x-icon" href="{% static 'images/favicon/apple-touch-icon.png'%}">
 
         <!-- All CSS Plugins -->
-        <link rel="stylesheet" type="text/css" href="{% static 'my_profile/css/plugin.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/plugin.css' %}">
 
         <!-- Main CSS Stylesheet -->
-        <link rel="stylesheet" type="text/css" href="{% static 'my_profile/css/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     
     <!-- Google Web Fonts  -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700">
@@ -128,7 +128,7 @@
          <div class="row">
                
               <div class="col-md-6 col-sm-12 col-xs-12">
-                <img class="img-responsive" src="{% static 'my_profile/images/bg/me.jpg' %}" draggable="false" alt="">
+                <img class="img-responsive" src="{% static 'images/bg/me.jpg' %}" draggable="false" alt="">
               </div>
                 
               <div class="col-md-6 col-sm-12 col-xs-12">
@@ -153,7 +153,7 @@
                 <div class="col-sm-12">
                     <div class="section-title">
                         <h2>Mon CV.</h2>
-                        <embed src="{% static 'my_profile/Walid_KEBBAB_CV.pdf' %}" width="800px" height="1100px" />
+                        <embed src="{% static 'Walid_KEBBAB_CV.pdf' %}" width="800px" height="1100px" />
                     </div>
                 </div>
             </div>
@@ -180,19 +180,19 @@
 <!--                <div class="testimonial-carousel-list margin-top-20">-->
 <!--                -->
 <!--                    <div class="testimonial-word text-center">-->
-<!--                    <img src="{% static 'my_profile/images/testimonial/1.png'%}" class="img-responsive" alt="">-->
+<!--                    <img src="{% static 'images/testimonial/1.png'%}" class="img-responsive" alt="">-->
 <!--                        <h2>John doe</h2>-->
 <!--                        <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duisauteiruredolor in reprehenderit in voluptate.</p>-->
 <!--                    </div>-->
 <!--                    -->
 <!--                    <div class="testimonial-word text-center">-->
-<!--                    <img src="{% static 'my_profile/images/testimonial/2.png'%}" class="img-responsive" alt="">-->
+<!--                    <img src="{% static 'images/testimonial/2.png'%}" class="img-responsive" alt="">-->
 <!--                        <h2>John doe</h2>-->
 <!--                        <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duisauteiruredolor in reprehenderit in voluptate.</p>-->
 <!--                    </div>-->
 <!--                    -->
 <!--                    <div class="testimonial-word text-center">-->
-<!--                    <img src="{% static 'my_profile/images/testimonial/3.png'%}" class="img-responsive" alt="">-->
+<!--                    <img src="{% static 'images/testimonial/3.png'%}" class="img-responsive" alt="">-->
 <!--                        <h2>John doe</h2>-->
 <!--                        <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duisauteiruredolor in reprehenderit in voluptate.</p>-->
 <!--                    </div>-->
@@ -365,12 +365,12 @@
     
     
     <!-- All Javascript Plugins  -->
-    <script type="text/javascript" src="{% static 'my_profile/js/jquery.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'my_profile/js/plugin.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/plugin.js' %}"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC0HAKwKinpoFKNGUwRBgkrKhF-sIqFUNA"></script>
     
     <!-- Main Javascript File  -->
-    <script type="text/javascript" src="{% static 'my_profile/js/scripts.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
   
   
   </body>
