--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,12 +75,9 @@ a {
     text-decoration: none;
 }
 
-img {
-    width: 100%;
-}
 
 a:hover {
-    color: #fff;
+    color: #074775;
     text-decoration: none;
 }
 
