--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
     
     <!-- Meta Tag -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     
     <!-- SEO -->
     <meta name="description" content="150 words">
@@ -81,7 +82,9 @@
                                         </li>
                                         <li><a class="smoth-scroll" href="#about">À propos</a>
                                         </li>
-                                        <li><a class="smoth-scroll" href="#portfolio">Mon CV</a>
+                                        <li><a class="smoth-scroll" href="#portfolio">Portfolio</a>
+                                        </li>
+                                        <li><a class="smoth-scroll" href="#cv">Mon CV</a>
                                         </li>
                                         <li><a class="smoth-scroll" href="#contact">Contact</a>
                                         </li>
@@ -105,7 +108,7 @@
                                     <h2><span class="typing"></span></h2>
                                     
                                     <div class="margin-top-60">
-                          <a class="button button-style button-style-icon fa fa-long-arrow-right smoth-scroll" href="#portfolio">Voir mon CV.</a>
+                          <a class="button button-style button-style-icon fa fa-long-arrow-right smoth-scroll" href="#cv">Voir mon CV.</a>
                                   </div>
                                 
                                 </div>
@@ -120,7 +123,7 @@
     <!-- Home & Menu Section End-->
     
     
-    
+
     
     <!-- About Start -->
     <section id="about" class="about-section">
@@ -134,8 +137,8 @@
                 <div class="about-me section-space-padding">
                   
                   <h2>À propos moi.</h2>
-                  
-                  <p> Titulaire d'une Licence en ignénerie des systémes d'information et des logiciel, un Master 2 en ingénerie des systémes informatique intélligent, et bientot d'un Master 2 en Miage valorisation et protection des données de l'entreprise à l'université de Paris, Je suis actuellement en stage de fin d'étude de 06 mois autant que développeur full stack au sein de l'entreprise Free Mobile, et je suis à la recherche d'une opportunité en CDI à partir du 01 octobre 2021.</p>
+
+                  <p> Titulaire d'une Licence en ignénerie des systémes d'information et des logiciel, un Master 2 en ingénerie des systémes informatique intélligent, et bientot d'un Master 2 en Miage valorisation et protection des données de l'entreprise à l'université de Paris, Je suis actuellement en stage de fin d'étude de 06 mois autant que développeur Full Stack au sein de l'entreprise Free Mobile, et je suis à la recherche d'une opportunité en CDI à partir du 01 octobre 2021.</p>
                  </div>
              
               </div>
@@ -144,67 +147,81 @@
        </section>
        <!-- About End -->
 
-    
-    <!-- Portfolio Start -->
-    <section id="portfolio" class="portfolio section-space-padding">
+    <!-- Services Start -->
+    <section id="portfolio" class="services-section section-space-padding">
+        <div class="container">
+           <div class="row">
+                <div >
+                    <div class="section-title">
+                        <h2>Portfolio</h2>
+                        <p>La plupart  mes projets réalisés n'appartiennent pas à moi, donc j'ai pas le droit de partager le code source correspondant.</p>
+                        <p> Le reste vous pouvez les trouver sur mon Github : <a href ="https://github.com/walid-kbb/" target="_blank" > <img src=" {% static 'images/favicon/github.png''%}"> </p></a>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+            <div class="col-md-4 col-sm-6">
+				<div class="services-detail">
+
+					<h3>Kinship verification</h3>
+                    <img src="{% static 'images/portfolio/kinship.jpg' %}" width="300" height="200">
+					<hr>
+					<p>Un systéme de verification de parenté a grande échelle, qui verifie utilisant le Deep Learning si deux personnes sont isue de la méme famille ou non à partir de leurs images.</p>
+                    <a href="https://www.linkedin.com/posts/walid-kebbab_computervision-deeplearning-intelligenceartificielle-activity-6720822205418106880-rnWb" target="_blank"> <p> Plus </p> </a>
+				</div>
+			</div>
+
+			 <div class="col-md-4 col-sm-6">
+				<div class="services-detail">
+
+					<h3>MyStore</h3>
+                    <img src="{% static 'images/portfolio/mystore.jpg' %}" width="300" height="200">
+					<hr>
+					<p>MyStore est une plateforme de gestion d’un site web vitrine. Elle permet à un administrateur de gérer les publications d’articles ( Smart phones ) disponibles au sein d’un magasin de vente de téléphones mobiles.</p>
+                    <a href="https://mystore-kebbab.herokuapp.com/" target="_blank"> <p> Site </p> </a>
+				</div>
+			</div>
+
+			<div class="col-md-4 col-sm-6">
+				<div class="services-detail">
+
+					<h3>ChatBot</h3>
+                    <img src="{% static 'images/portfolio/chatbot.jpg' %}" width="300" height="200">
+					<hr>
+					<p>Un bot Facebook Messenger en Node JS possédant des caractéristiques spécifiques. </p>
+                    <a href="https://github.com/walid-kbb/myStore-Chatbot" target="_blank"> <p> Github </p> </a>
+				</div>
+			</div>
+
+
+            </div>
+        </div>
+    </section>
+    <!-- Services End -->
+
+    <div></div>
+    <!-- CV Start -->
+    <section id="cv" class="portfolio section-space-padding">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <div class="section-title">
                         <h2>Mon CV.</h2>
-                        <embed src="{% static 'Walid_KEBBAB_CV.pdf' %}" width="800px" height="1100px" />
+                        <a href="{% static 'Walid_KEBBAB_CV.pdf' %}" target="_blank"><img src="{% static 'images/portfolio/cv.jpg' %}" width="350" height="500" /></a>
                     </div>
                 </div>
             </div>
         </div>
+        </br>
+                      <a href="{% static 'Walid_KEBBAB_CV.pdf' %}" target="_blank"> <p style="text-align: center"> Télécharger </p></a>
 
      </section>
-    <!-- Portfolio End -->
-    
-    
-    
-<!--     &lt;!&ndash; Testimonial Start &ndash;&gt;-->
-<!--     <section id="testimonials" class="testimonial-section section-space-padding">-->
-<!--        <div class="container">-->
-<!--            <div class="row">-->
-<!--                <div class="col-sm-12">-->
-<!--                    <div class="section-title">-->
-<!--                        <h2>Testimonials.</h2>-->
-<!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            -->
-<!--            <div class="row">-->
-<!--                <div class="testimonial-carousel-list margin-top-20">-->
-<!--                -->
-<!--                    <div class="testimonial-word text-center">-->
-<!--                    <img src="{% static 'images/testimonial/1.png'%}" class="img-responsive" alt="">-->
-<!--                        <h2>John doe</h2>-->
-<!--                        <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duisauteiruredolor in reprehenderit in voluptate.</p>-->
-<!--                    </div>-->
-<!--                    -->
-<!--                    <div class="testimonial-word text-center">-->
-<!--                    <img src="{% static 'images/testimonial/2.png'%}" class="img-responsive" alt="">-->
-<!--                        <h2>John doe</h2>-->
-<!--                        <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duisauteiruredolor in reprehenderit in voluptate.</p>-->
-<!--                    </div>-->
-<!--                    -->
-<!--                    <div class="testimonial-word text-center">-->
-<!--                    <img src="{% static 'images/testimonial/3.png'%}" class="img-responsive" alt="">-->
-<!--                        <h2>John doe</h2>-->
-<!--                        <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duisauteiruredolor in reprehenderit in voluptate.</p>-->
-<!--                    </div>-->
-<!--                    -->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-<!--    &lt;!&ndash; Testimonial End &ndash;&gt;-->
+    <!-- CV End -->
 
-    
-    
-    
+
     <!-- Call to Action Start -->
     <section class="call-to-action section-space-padding text-center">
        <div class="container">
@@ -257,105 +274,13 @@
                </div>
               </div>
             
-         
-<!--         <div class="row">-->
-<!--           -->
-<!--           <div class="col-md-6">   -->
-<!--                 -->
-<!--               <div class="row">-->
-<!--                  <form>-->
-<!--                    -->
-<!--					  <div class="col-sm-6">-->
-<!--						<div class="form-group">-->
-<!--						  <input type="text" id="name" class="form-control" placeholder="Your Name">-->
-<!--						 </div>-->
-<!--                        </div>-->
-<!--								-->
-<!--                       <div class="col-sm-6">-->
-<!--					    <div class="form-group">-->
-<!--						 <input type="email" id="email" class="form-control" placeholder="Your Email">-->
-<!--						 </div>-->
-<!--                        </div>-->
-<!--                        -->
-<!--                        <div class="col-sm-6">-->
-<!--						  <div class="form-group">-->
-<!--							<input type="text" id="website" class="form-control" placeholder="Your Website">-->
-<!--						   </div>-->
-<!--                          </div>-->
-<!--                          -->
-<!--                        <div class="col-sm-6">-->
-<!--						  <div class="form-group">-->
-<!--							<input type="text" id="address" class="form-control" placeholder="Where are You From?">-->
-<!--						   </div>-->
-<!--                          </div>-->
-<!--								-->
-<!--                         <div class="col-sm-12">-->
-<!--						  <select id="subject" class="form-group form-control">-->
-<!--							<option value="" selected disabled>Subject</option>-->
-<!--							<option>Website Design & Development</option>-->
-<!--							<option>Wordpress Development</option>-->
-<!--							<option>Search Engine Optimization</option>-->
-<!--                            <option>Mobile Website</option>-->
-<!--							<option>I Want to General Talk</option>-->
-<!--                            <option>Other</option>-->
-<!--						   </select>-->
-<!--                          </div>-->
-<!--								-->
-<!--                       <div class="col-sm-12">-->
-<!--					    <div class="textarea-message form-group">-->
-<!--					      <textarea id="message" class="textarea-message form-control" placeholder="Your Message" rows="5"></textarea>-->
-<!--						  </div>-->
-<!--                         </div>-->
-<!--                   -->
-<!--                   -->
-<!--                    <div class="text-center">      -->
-<!--		   <button type="submit" class="button button-style button-style-dark button-style-icon fa fa-long-arrow-right text-center">Submit</button>-->
-<!--	                  </div>-->
-<!--                       -->
-<!--                  </form>-->
-<!--                   -->
-<!--				</div>-->
-<!--               </div>-->
-<!--            -->
-<!--            -->
-<!--            <div class="col-md-6">   -->
-<!--              <div id="my-address" class="map space-set">-->
-<!--              <p>Map will not be display without Internet Connection.</p>-->
-<!--            </div>-->
-<!--           </div>-->
-<!--           -->
-<!--        -->
-<!--        </div>-->
+
        </div>
 
        
      </section>
      <!-- Contact End -->
-       
-        
-        
-        
-<!--    &lt;!&ndash; Footer Start &ndash;&gt;-->
-<!--    <footer class="footer-section">-->
-<!--        <div class="container">-->
-<!--            <div class="row">-->
-<!--               -->
-<!--      <div class="col-md-4 text-left">-->
-<!--       <p><span><a href="#about" class="smoth-scroll">About Me</a></span> | <span><a href="#portfolio" class="smoth-scroll">Portfolio</a></span></p>-->
-<!--          </div>-->
-<!--               -->
-<!--            <div class="col-md-4 text-center">-->
-<!--               <p>2021</p>-->
-<!--               </div>-->
-<!--              -->
-<!--             <div class="col-md-4 uipasta-credit text-right">-->
-<!--                <p>Design By <a href="http://www.uipasta.com" target="_blank" title="UiPasta">UiPasta</a></p>-->
-<!--                </div>-->
-<!--                -->
-<!--             </div>-->
-<!--        </div>-->
-<!--    </footer>-->
-<!--    &lt;!&ndash; Footer End &ndash;&gt;-->
+
     
     
     <!-- Back to Top Start -->
