--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@
 				<div class="services-detail">
 
 					<h3>Kinship verification</h3>
-                    <img src="{% static 'images/portfolio/kinship.jpg' %}" width="300" height="200">
+                    <img src="{% static 'images/portfolio/kinship.JPG' %}" width="300" height="200">
 					<hr>
 					<p>Un systéme de verification de parenté a grande échelle, qui verifie utilisant le Deep Learning si deux personnes sont isue de la méme famille ou non à partir de leurs images.</p>
                     <a href="https://www.linkedin.com/posts/walid-kebbab_computervision-deeplearning-intelligenceartificielle-activity-6720822205418106880-rnWb" target="_blank"> <p> Plus </p> </a>
@@ -178,7 +178,7 @@
 				<div class="services-detail">
 
 					<h3>MyStore</h3>
-                    <img src="{% static 'images/portfolio/mystore.jpg' %}" width="300" height="200">
+                    <img src="{% static 'images/portfolio/mystore.JPG' %}" width="300" height="200">
 					<hr>
 					<p>MyStore est une plateforme de gestion d’un site web vitrine. Elle permet à un administrateur de gérer les publications d’articles ( Smart phones ) disponibles au sein d’un magasin de vente de téléphones mobiles.</p>
                     <a href="https://mystore-kebbab.herokuapp.com/" target="_blank"> <p> Site </p> </a>
@@ -189,7 +189,7 @@
 				<div class="services-detail">
 
 					<h3>ChatBot</h3>
-                    <img src="{% static 'images/portfolio/chatbot.jpg' %}" width="300" height="200">
+                    <img src="{% static 'images/portfolio/chatbot.JPG' %}" width="300" height="200">
 					<hr>
 					<p>Un bot Facebook Messenger en Node JS possédant des caractéristiques spécifiques. </p>
                     <a href="https://github.com/walid-kbb/myStore-Chatbot" target="_blank"> <p> Github </p> </a>
