--- a/templates/index.html
+++ b/templates/index.html
@@ -127,6 +127,7 @@
     
     <!-- About Start -->
     <section id="about" class="about-section">
+        <div class="container">
          <div class="row">
                
               <div class="col-md-6 col-sm-12 col-xs-12">
@@ -134,7 +135,7 @@
               </div>
                 
               <div class="col-md-6 col-sm-12 col-xs-12">
-                <div class="about-me section-space-padding">
+                <div class="about-me">
                   
                   <h2>À propos moi.</h2>
 
@@ -142,15 +143,16 @@
                  </div>
              
               </div>
-                
-          </div>
+         </div>
+        </div>
        </section>
        <!-- About End -->
 
-    <!-- Services Start -->
-    <section id="portfolio" class="services-section section-space-padding">
+    <!-- Portfolio Start -->
+    <section id="portfolio" class="portfolio section-space-padding">
         <div class="container">
            <div class="row">
+               <div class="col-sm-12">
                 <div >
                     <div class="section-title">
                         <h2>Portfolio</h2>
@@ -198,9 +200,10 @@
 
 
             </div>
+           </div>
         </div>
     </section>
-    <!-- Services End -->
+    <!-- Portfolio End -->
 
     <div></div>
     <!-- CV Start -->
