--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,7 @@
             <div class="row">
 
             <div class="col-md-4 col-sm-6">
-				<div class="services-detail">
+				<div class="portfolio-detail">
 
 					<h3>Kinship verification</h3>
                     <img src="{% static 'images/portfolio/kinship.JPG' %}" width="300" height="200">
@@ -177,7 +177,7 @@
 			</div>
 
 			 <div class="col-md-4 col-sm-6">
-				<div class="services-detail">
+				<div class="portfolio-detail">
 
 					<h3>MyStore</h3>
                     <img src="{% static 'images/portfolio/mystore.JPG' %}" width="300" height="200">
@@ -188,7 +188,7 @@
 			</div>
 
 			<div class="col-md-4 col-sm-6">
-				<div class="services-detail">
+				<div class="portfolio-detail">
 
 					<h3>ChatBot</h3>
                     <img src="{% static 'images/portfolio/chatbot.JPG' %}" width="300" height="200">
