--- a/static/css/style.css
+++ b/static/css/style.css
@@ -719,19 +719,19 @@ ul.portfolio li.active {
 
 
 
-/* Services */
+/* portfolio */
 
-.services-section {
+.portfolio {
   background-color: #F9F9F9;
 }
 
-.services-section hr {
+.portfolio hr {
   border-bottom: 2px solid #24b662;
   width: 42px;
   margin-left: 0px;
 }
 
-.services-section .services-detail {
+.portfolio .portfolio-detail {
   border-radius: 4px;
   border-bottom-right-radius: 20%;
   background-color: #ffffff;
@@ -743,13 +743,13 @@ ul.portfolio li.active {
   margin-top: 32px;
 }
 
-.services-section .services-detail:hover {
+.portfolio .portfolio-detail:hover {
   border-bottom-right-radius: 4px;
   box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
   top: -5px;
 }
 
-.services-section .services-detail .fa {
+.portfolio .portfolio-detail .fa {
   font-size: 42px;
 }
 
