--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
             <div class="col-md-4 col-sm-6">
 				<div class="portfolio-detail">
 
-					<h3>Kinship verification</h3>
+					<h3>Kinship verification</h3></br>
                     <img src="{% static 'images/portfolio/kinship.JPG' %}" width="300" height="200">
 					<hr>
 					<p>Un systéme de verification de parenté a grande échelle, qui verifie utilisant le Deep Learning si deux personnes sont isue de la méme famille ou non à partir de leurs images.</p>
@@ -179,7 +179,7 @@
 			 <div class="col-md-4 col-sm-6">
 				<div class="portfolio-detail">
 
-					<h3>MyStore</h3>
+					<h3>MyStore</h3></br>
                     <img src="{% static 'images/portfolio/mystore.JPG' %}" width="300" height="200">
 					<hr>
 					<p>MyStore est une plateforme de gestion d’un site web vitrine. Elle permet à un administrateur de gérer les publications d’articles ( Smart phones ) disponibles au sein d’un magasin de vente de téléphones mobiles.</p>
@@ -190,7 +190,7 @@
 			<div class="col-md-4 col-sm-6">
 				<div class="portfolio-detail">
 
-					<h3>ChatBot</h3>
+					<h3>ChatBot</h3> </br>
                     <img src="{% static 'images/portfolio/chatbot.JPG' %}" width="300" height="200">
 					<hr>
 					<p>Un bot Facebook Messenger en Node JS possédant des caractéristiques spécifiques. </p>
