--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -327,7 +327,7 @@ body.loaded #preloader{
 
 .home-section-background {
     position: relative;
-    height: 630px;
+    height: 100%;
     width : 100%;
     background: url(../images/bg/bg.jpg);
     background-size: cover;
@@ -485,18 +485,19 @@ body.loaded #preloader{
 	background-color: #F9F9F9;
 }
 
-.about-section img {
-	position: absolute;
+.about-section .row {
+
+    padding-top : 130px;
 }
 
 .about-me {}
 
 .about-me h2 {
-	padding: 0px 50px;
+	padding-top:  80px;
 }
 
 .about-me p {
-	padding: 50px;
+	padding-top: 50px;
 	font-size: 15px;
 }
 
@@ -718,19 +719,19 @@ ul.portfolio li.active {
 
 
 
-/* Services */
+/* portfolio */
 
-.services-section {
+.portfolio {
   background-color: #F9F9F9;
 }
 
-.services-section hr {
+.portfolio hr {
   border-bottom: 2px solid #24b662;
   width: 42px;
   margin-left: 0px;
 }
 
-.services-section .services-detail {
+.portfolio .portfolio-detail {
   border-radius: 4px;
   border-bottom-right-radius: 20%;
   background-color: #ffffff;
@@ -742,13 +743,13 @@ ul.portfolio li.active {
   margin-top: 32px;
 }
 
-.services-section .services-detail:hover {
+.portfolio .portfolio-detail:hover {
   border-bottom-right-radius: 4px;
   box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
   top: -5px;
 }
 
-.services-section .services-detail .fa {
+.portfolio .portfolio-detail .fa {
   font-size: 42px;
 }
 
