--- a/templates/index.html
+++ b/templates/index.html
@@ -156,8 +156,8 @@
                 <div >
                     <div class="section-title">
                         <h2>Portfolio</h2>
-                        <p>La plupart  mes projets réalisés n'appartiennent pas à moi, donc j'ai pas le droit de partager le code source correspondant.</p>
-                        <p> Le reste vous pouvez les trouver sur mon Github : <a href ="https://github.com/walid-kbb/" target="_blank" > <img src=" {% static 'images/favicon/github.png''%}"> </p></a>
+                        <p>La plupart de mes projets réalisés n'appartiennent pas à moi, donc pour des raisons de confidentialité je ne les pas publier.</p>
+                        <p> Le reste, vous pouvez les trouver sur mon Github =>  <a href ="https://github.com/walid-kbb/" target="_blank" > <img src=" {% static 'images/favicon/github.png''%}"> </p></a>
 
                     </div>
                 </div>
