--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <div class="header-text">
-                                    <p>Salut!</p>
+                                    <p>Hello world</p>
                                     <h2><span class="typing"></span></h2>
                                     
                                     <div class="margin-top-60">
