--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
                   
                   <h2>À propos moi.</h2>
 
-                  <p> Titulaire d'une Licence en ignénerie des systémes d'information et des logiciel, un Master 2 en ingénerie des systémes informatique intélligent, et bientot d'un Master 2 en Miage valorisation et protection des données de l'entreprise à l'université de Paris, Je suis actuellement en stage de fin d'étude de 06 mois autant que développeur Full Stack au sein de l'entreprise Free Mobile, et je suis à la recherche d'une opportunité en CDI à partir du 01 octobre 2021.</p>
+                  <p> Titulaire d'une Licence en ignénerie des systémes d'information et des logiciel, un Master 2 en ingénerie des systémes informatique intélligent, et bientot d'un Master 2 en Miage valorisation et protection des données de l'entreprise à l'université de Paris, Je suis actuellement en stage de fin d'étude de 06 mois en tant que développeur Full Stack au sein de l'entreprise Free Mobile, et je suis à la recherche d'une opportunité en CDI à partir du 01 octobre 2021.</p>
                  </div>
              
               </div>
