--- a/templates/index.html
+++ b/templates/index.html
@@ -213,14 +213,15 @@
                 <div class="col-sm-12">
                     <div class="section-title">
                         <h2>Mon CV.</h2>
-                        <a href="{% static 'Walid_KEBBAB_CV.pdf' %}" target="_blank"><img src="{% static 'images/portfolio/cv.jpg' %}" width="350" height="500" /></a>
+						</br> </br> </br>
+                        <a href="{% static 'Walid_KEBBAB_CV.pdf' %}" target="_blank"> <p style="text-align: center; font-size: xx-large;"> Télécharger </p></a>
                     </div>
                 </div>
             </div>
         </div>
 
         </br>
-                      <a href="{% static 'Walid_KEBBAB_CV.pdf' %}" target="_blank"> <p style="text-align: center"> Télécharger </p></a>
+                      
 
      </section>
     <!-- CV End -->
